syntax = "proto3";
import "/home/barak/Desktop/SuperNova/approver-service/proto/requestService.proto";
package ApproverService;

service ApproverService {
    rpc AddCommanderApprover(AddApproverReq) returns (Approver) {}
    rpc AddSecurityApprover(AddApproverReq) returns (Approver) {}
    rpc GetUserType(GetUserTypeReq) returns (GetUserTypeRes) {}
    rpc SearchApproverByDisplayName(SearchByDisplayNameReq) returns (ApproverArray) {}
    rpc SearchApproverByDomainUser(SearchByDomainUserReq) returns (ApproverArray) {}

    rpc GetAllSecurityApprovers(GetAllApproversReq) returns (ApproverArray) {}
    rpc GetAllCommanderApprovers(GetAllApproversReq) returns (ApproverArray) {}
    rpc UpdateCommanderDecision(UpdateDecisionReq) returns (SuccessMessage) {}
    rpc UpdateSecurityDecision(UpdateDecisionReq) returns (SuccessMessage) {}
}

message GetAllApproversReq{
    
}

message UpdateDecisionReq{
    string requestId = 1;
    RequestService.ApproverDecision approverDecision = 2;
}

message SuccessMessage{
    bool success = 1;
}

message SearchByDisplayNameReq{
    string displayName = 1;
    UserType type = 2;
    int32 from = 3;
    int32 to = 4;

}
message SearchByDomainUserReq{
    string domainUser = 1;
    UserType type = 2;
}

message ApproverArray{
    repeated Approver approvers = 1;
}

message GetUserTypeReq{
    string entityId = 1;
}

message GetUserTypeRes{
    string entityId = 1;
    UserType type = 2;
}

message AddApproverReq{
    string entityId = 1;
    string displayName = 2;
    repeated string domainUsers = 3;
    string akaUnit = 4;
}

message Approver{
    string entityId = 1;
    string displayName = 2;
    repeated string domainUsers = 3; //entity may have multiple emails
    UserType type = 4;
    string akaUnit = 5;
    string id = 6;

}

enum RequestStatus{
    SUBMITTED = 0;
    DECLINED = 1;
    IN_PROGRESS = 2;
    DONE = 3;
    FAILED = 4;
}

enum UserType{
    SECURITY = 0;
    COMMANDER = 1;
    SOLDIER = 2;
}
